test/vector/testError.good
testError.chpl:6: error: Unimplemented type for GSLVector : R
