test/vector/testError.chpl
use GSL.Array;

record R {
  var x : int;
}
var x = new owned GSLVector(R, 10);